--- a/src/index.html
+++ b/src/index.html
@@ -10,127 +10,129 @@
             <h1> Excited and Secretive Pebbles</h1>
             <hr>
         </div>  
+
         <div>
             <ul>
-                <li id="00"><img src="neonring.png"></li>
-                <li id="01"><img src="neonring.png"></li>
-                <li id="02"><img src="neonring.png"></li>
-                <li id="03"><img src="neonring.png"></li>
-                <li id="04"><img src="neonring.png"></li>
-                <li id="05"><img src="neonring.png"></li>
-                <li id="06"><img src="neonring.png"></li>
-                <li id="07"><img src="neonring.png"></li>
-                <li id="08"><img src="neonring.png"></li>
-                <li id="09"><img src="neonring.png"></li>
+                <li><img id="i00" src="neonring.png"></li>
+                <li><img id="i01" src="neonring.png"></li>
+                <li><img id="i02" src="neonring.png"></li>
+                <li><img id="i03" src="neonring.png"></li>
+                <li><img id="i04" src="neonring.png"></li>
+                <li><img id="i05" src="neonring.png"></li>
+                <li><img id="i06" src="neonring.png"></li>
+                <li><img id="i07" src="neonring.png"></li>
+                <li><img id="i08" src="neonring.png"></li>
+                <li><img id="i09" src="neonring.png"></li>
             </ul>
             <ul>
-                <li id="10"><img src="neonring.png"></li>
-                <li id="11"><img src="neonring.png"></li>
-                <li id="12"><img src="neonring.png"></li>
-                <li id="13"><img src="neonring.png"></li>
-                <li id="14"><img src="neonring.png"></li>
-                <li id="15"><img src="neonring.png"></li>
-                <li id="16"><img src="neonring.png"></li>
-                <li id="17"><img src="neonring.png"></li>
-                <li id="18"><img src="neonring.png"></li>
-                <li id="19"><img src="neonring.png"></li>
+                <li><img id="i10" src="neonring.png"></li>
+                <li><img id="i11" src="neonring.png"></li>
+                <li><img id="i12" src="neonring.png"></li>
+                <li><img id="i13" src="neonring.png"></li>
+                <li><img id="i14" src="neonring.png"></li>
+                <li><img id="i15" src="neonring.png"></li>
+                <li><img id="i16" src="neonring.png"></li>
+                <li><img id="i17" src="neonring.png"></li>
+                <li><img id="i18" src="neonring.png"></li>
+                <li><img id="i19" src="neonring.png"></li>
             </ul>
             <ul>
-                <li id="20"><img src="neonring.png"></li>
-                <li id="21"><img src="neonring.png"></li>
-                <li id="22"><img src="neonring.png"></li>
-                <li id="23"><img src="neonring.png"></li>
-                <li id="24"><img src="neonring.png"></li>
-                <li id="25"><img src="neonring.png"></li>
-                <li id="26"><img src="neonring.png"></li>
-                <li id="27"><img src="neonring.png"></li>
-                <li id="28"><img src="neonring.png"></li>
-                <li id="29"><img src="neonring.png"></li>
+                <li><img id="i20" src="neonring.png"></li>
+                <li><img id="i21" src="neonring.png"></li>
+                <li><img id="i22" src="neonring.png"></li>
+                <li><img id="i23" src="neonring.png"></li>
+                <li><img id="i24" src="neonring.png"></li>
+                <li><img id="i25" src="neonring.png"></li>
+                <li><img id="i26" src="neonring.png"></li>
+                <li><img id="i27" src="neonring.png"></li>
+                <li><img id="i28" src="neonring.png"></li>
+                <li><img id="i29" src="neonring.png"></li>
             </ul>
             <ul>
-                <li id="30"><img src="neonring.png"></li>
-                <li id="31"><img src="neonring.png"></li>
-                <li id="32"><img src="neonring.png"></li>
-                <li id="33"><img src="neonring.png"></li>
-                <li id="34"><img src="neonring.png"></li>
-                <li id="35"><img src="neonring.png"></li>
-                <li id="36"><img src="neonring.png"></li>
-                <li id="37"><img src="neonring.png"></li>
-                <li id="38"><img src="neonring.png"></li>
-                <li id="39"><img src="neonring.png"></li>
+                <li><img id="i30" src="neonring.png"></li>
+                <li><img id="i31" src="neonring.png"></li>
+                <li><img id="i32" src="neonring.png"></li>
+                <li><img id="i33" src="neonring.png"></li>
+                <li><img id="i34" src="neonring.png"></li>
+                <li><img id="i35" src="neonring.png"></li>
+                <li><img id="i36" src="neonring.png"></li>
+                <li><img id="i37" src="neonring.png"></li>
+                <li><img id="i38" src="neonring.png"></li>
+                <li><img id="i39" src="neonring.png"></li>
             </ul>
             <ul>
-                <li id="40"><img src="neonring.png"></li>
-                <li id="41"><img src="neonring.png"></li>
-                <li id="42"><img src="neonring.png"></li>
-                <li id="43"><img src="neonring.png"></li>
-                <li id="44"><img src="neonring.png"></li>
-                <li id="45"><img src="neonring.png"></li>
-                <li id="46"><img src="neonring.png"></li>
-                <li id="47"><img src="neonring.png"></li>
-                <li id="48"><img src="neonring.png"></li>
-                <li id="49"><img src="neonring.png"></li>
+                <li><img id="i40" src="neonring.png"></li>
+                <li><img id="i41" src="neonring.png"></li>
+                <li><img id="i42" src="neonring.png"></li>
+                <li><img id="i43" src="neonring.png"></li>
+                <li><img id="i44" src="neonring.png"></li>
+                <li><img id="i45" src="neonring.png"></li>
+                <li><img id="i46" src="neonring.png"></li>
+                <li><img id="i47" src="neonring.png"></li>
+                <li><img id="i48" src="neonring.png"></li>
+                <li><img id="i49" src="neonring.png"></li>
             </ul>
             <ul>
-                <li id="50"><img src="neonring.png"></li>
-                <li id="51"><img src="neonring.png"></li>
-                <li id="52"><img src="neonring.png"></li>
-                <li id="53"><img src="neonring.png"></li>
-                <li id="54"><img src="neonring.png"></li>
-                <li id="55"><img src="neonring.png"></li>
-                <li id="56"><img src="neonring.png"></li>
-                <li id="57"><img src="neonring.png"></li>
-                <li id="58"><img src="neonring.png"></li>
-                <li id="59"><img src="neonring.png"></li>
+                <li><img id="i50" src="neonring.png"></li>
+                <li><img id="i51" src="neonring.png"></li>
+                <li><img id="i52" src="neonring.png"></li>
+                <li><img id="i53" src="neonring.png"></li>
+                <li><img id="i54" src="neonring.png"></li>
+                <li><img id="i55" src="neonring.png"></li>
+                <li><img id="i56" src="neonring.png"></li>
+                <li><img id="i57" src="neonring.png"></li>
+                <li><img id="i58" src="neonring.png"></li>
+                <li><img id="i59" src="neonring.png"></li>
             </ul>
             <ul>
-                <li id="60"><img src="neonring.png"></li>
-                <li id="61"><img src="neonring.png"></li>
-                <li id="62"><img src="neonring.png"></li>
-                <li id="63"><img src="neonring.png"></li>
-                <li id="64"><img src="neonring.png"></li>
-                <li id="65"><img src="neonring.png"></li>
-                <li id="66"><img src="neonring.png"></li>
-                <li id="67"><img src="neonring.png"></li>
-                <li id="68"><img src="neonring.png"></li>
-                <li id="69"><img src="neonring.png"></li>
+                <li><img id="i60" src="neonring.png"></li>
+                <li><img id="i61" src="neonring.png"></li>
+                <li><img id="i62" src="neonring.png"></li>
+                <li><img id="i63" src="neonring.png"></li>
+                <li><img id="i64" src="neonring.png"></li>
+                <li><img id="i65" src="neonring.png"></li>
+                <li><img id="i66" src="neonring.png"></li>
+                <li><img id="i67" src="neonring.png"></li>
+                <li><img id="i68" src="neonring.png"></li>
+                <li><img id="i69" src="neonring.png"></li>
             </ul>
             <ul>
-                <li id="70"><img src="neonring.png"></li>
-                <li id="71"><img src="neonring.png"></li>
-                <li id="72"><img src="neonring.png"></li>
-                <li id="73"><img src="neonring.png"></li>
-                <li id="74"><img src="neonring.png"></li>
-                <li id="75"><img src="neonring.png"></li>
-                <li id="76"><img src="neonring.png"></li>
-                <li id="77"><img src="neonring.png"></li>
-                <li id="78"><img src="neonring.png"></li>
-                <li id="79"><img src="neonring.png"></li>
+                <li><img id="i70" src="neonring.png"></li>
+                <li><img id="i71" src="neonring.png"></li>
+                <li><img id="i72" src="neonring.png"></li>
+                <li><img id="i73" src="neonring.png"></li>
+                <li><img id="i74" src="neonring.png"></li>
+                <li><img id="i75" src="neonring.png"></li>
+                <li><img id="i76" src="neonring.png"></li>
+                <li><img id="i77" src="neonring.png"></li>
+                <li><img id="i78" src="neonring.png"></li>
+                <li><img id="i79" src="neonring.png"></li>
             </ul>
             <ul>
-                <li id="80"><img src="neonring.png"></li>
-                <li id="81"><img src="neonring.png"></li>
-                <li id="82"><img src="neonring.png"></li>
-                <li id="83"><img src="neonring.png"></li>
-                <li id="84"><img src="neonring.png"></li>
-                <li id="85"><img src="neonring.png"></li>
-                <li id="86"><img src="neonring.png"></li>
-                <li id="87"><img src="neonring.png"></li>
-                <li id="88"><img src="neonring.png"></li>
-                <li id="89"><img src="neonring.png"></li>
+                <li><img id="i80" src="neonring.png"></li>
+                <li><img id="i81" src="neonring.png"></li>
+                <li><img id="i82" src="neonring.png"></li>
+                <li><img id="i83" src="neonring.png"></li>
+                <li><img id="i84" src="neonring.png"></li>
+                <li><img id="i85" src="neonring.png"></li>
+                <li><img id="i86" src="neonring.png"></li>
+                <li><img id="i87" src="neonring.png"></li>
+                <li><img id="i88" src="neonring.png"></li>
+                <li><img id="i89" src="neonring.png"></li>
             </ul>
             <ul>
-                <li id="90"><img src="neonring.png"></li>
-                <li id="91"><img src="neonring.png"></li>
-                <li id="92"><img src="neonring.png"></li>
-                <li id="93"><img src="neonring.png"></li>
-                <li id="94"><img src="neonring.png"></li>
-                <li id="95"><img src="neonring.png"></li>
-                <li id="96"><img src="neonring.png"></li>
-                <li id="97"><img src="neonring.png"></li>
-                <li id="98"><img src="neonring.png"></li>
-                <li id="99"><img src="neonring.png"></li>
+                <li><img id="i90" src="neonring.png"></li>
+                <li><img id="i91" src="neonring.png"></li>
+                <li><img id="i92" src="neonring.png"></li>
+                <li><img id="i93" src="neonring.png"></li>
+                <li><img id="i94" src="neonring.png"></li>
+                <li><img id="i95" src="neonring.png"></li>
+                <li><img id="i96" src="neonring.png"></li>
+                <li><img id="i97" src="neonring.png"></li>
+                <li><img id="i98" src="neonring.png"></li>
+                <li><img id="i99" src="neonring.png"></li>
             </ul>
         </div>
+
     </body>
 </html>
