changed the ring image from png to svg  +  added all slide animations.

--- a/src/index.html
+++ b/src/index.html
@@ -13,124 +13,124 @@
 
         <div>
             <ul>
-                <li><img id="i00" src="neonring.png"></li>
-                <li><img id="i01" src="neonring.png"></li>
-                <li><img id="i02" src="neonring.png"></li>
-                <li><img id="i03" src="neonring.png"></li>
-                <li><img id="i04" src="neonring.png"></li>
-                <li><img id="i05" src="neonring.png"></li>
-                <li><img id="i06" src="neonring.png"></li>
-                <li><img id="i07" src="neonring.png"></li>
-                <li><img id="i08" src="neonring.png"></li>
-                <li><img id="i09" src="neonring.png"></li>
+                <li><img id="i00" src="circle.svg"></li>
+                <li><img id="i01" src="circle.svg"></li>
+                <li><img id="i02" src="circle.svg"></li>
+                <li><img id="i03" src="circle.svg"></li>
+                <li><img id="i04" src="circle.svg"></li>
+                <li><img id="i05" src="circle.svg"></li>
+                <li><img id="i06" src="circle.svg"></li>
+                <li><img id="i07" src="circle.svg"></li>
+                <li><img id="i08" src="circle.svg"></li>
+                <li><img id="i09" src="circle.svg"></li>
             </ul>
             <ul>
-                <li><img id="i10" src="neonring.png"></li>
-                <li><img id="i11" src="neonring.png"></li>
-                <li><img id="i12" src="neonring.png"></li>
-                <li><img id="i13" src="neonring.png"></li>
-                <li><img id="i14" src="neonring.png"></li>
-                <li><img id="i15" src="neonring.png"></li>
-                <li><img id="i16" src="neonring.png"></li>
-                <li><img id="i17" src="neonring.png"></li>
-                <li><img id="i18" src="neonring.png"></li>
-                <li><img id="i19" src="neonring.png"></li>
+                <li><img id="i10" src="circle.svg"></li>
+                <li><img id="i11" src="circle.svg"></li>
+                <li><img id="i12" src="circle.svg"></li>
+                <li><img id="i13" src="circle.svg"></li>
+                <li><img id="i14" src="circle.svg"></li>
+                <li><img id="i15" src="circle.svg"></li>
+                <li><img id="i16" src="circle.svg"></li>
+                <li><img id="i17" src="circle.svg"></li>
+                <li><img id="i18" src="circle.svg"></li>
+                <li><img id="i19" src="circle.svg"></li>
             </ul>
             <ul>
-                <li><img id="i20" src="neonring.png"></li>
-                <li><img id="i21" src="neonring.png"></li>
-                <li><img id="i22" src="neonring.png"></li>
-                <li><img id="i23" src="neonring.png"></li>
-                <li><img id="i24" src="neonring.png"></li>
-                <li><img id="i25" src="neonring.png"></li>
-                <li><img id="i26" src="neonring.png"></li>
-                <li><img id="i27" src="neonring.png"></li>
-                <li><img id="i28" src="neonring.png"></li>
-                <li><img id="i29" src="neonring.png"></li>
+                <li><img id="i20" src="circle.svg"></li>
+                <li><img id="i21" src="circle.svg"></li>
+                <li><img id="i22" src="circle.svg"></li>
+                <li><img id="i23" src="circle.svg"></li>
+                <li><img id="i24" src="circle.svg"></li>
+                <li><img id="i25" src="circle.svg"></li>
+                <li><img id="i26" src="circle.svg"></li>
+                <li><img id="i27" src="circle.svg"></li>
+                <li><img id="i28" src="circle.svg"></li>
+                <li><img id="i29" src="circle.svg"></li>
             </ul>
             <ul>
-                <li><img id="i30" src="neonring.png"></li>
-                <li><img id="i31" src="neonring.png"></li>
-                <li><img id="i32" src="neonring.png"></li>
-                <li><img id="i33" src="neonring.png"></li>
-                <li><img id="i34" src="neonring.png"></li>
-                <li><img id="i35" src="neonring.png"></li>
-                <li><img id="i36" src="neonring.png"></li>
-                <li><img id="i37" src="neonring.png"></li>
-                <li><img id="i38" src="neonring.png"></li>
-                <li><img id="i39" src="neonring.png"></li>
+                <li><img id="i30" src="circle.svg"></li>
+                <li><img id="i31" src="circle.svg"></li>
+                <li><img id="i32" src="circle.svg"></li>
+                <li><img id="i33" src="circle.svg"></li>
+                <li><img id="i34" src="circle.svg"></li>
+                <li><img id="i35" src="circle.svg"></li>
+                <li><img id="i36" src="circle.svg"></li>
+                <li><img id="i37" src="circle.svg"></li>
+                <li><img id="i38" src="circle.svg"></li>
+                <li><img id="i39" src="circle.svg"></li>
             </ul>
             <ul>
-                <li><img id="i40" src="neonring.png"></li>
-                <li><img id="i41" src="neonring.png"></li>
-                <li><img id="i42" src="neonring.png"></li>
-                <li><img id="i43" src="neonring.png"></li>
-                <li><img id="i44" src="neonring.png"></li>
-                <li><img id="i45" src="neonring.png"></li>
-                <li><img id="i46" src="neonring.png"></li>
-                <li><img id="i47" src="neonring.png"></li>
-                <li><img id="i48" src="neonring.png"></li>
-                <li><img id="i49" src="neonring.png"></li>
+                <li><img id="i40" src="circle.svg"></li>
+                <li><img id="i41" src="circle.svg"></li>
+                <li><img id="i42" src="circle.svg"></li>
+                <li><img id="i43" src="circle.svg"></li>
+                <li><img id="i44" src="circle.svg"></li>
+                <li><img id="i45" src="circle.svg"></li>
+                <li><img id="i46" src="circle.svg"></li>
+                <li><img id="i47" src="circle.svg"></li>
+                <li><img id="i48" src="circle.svg"></li>
+                <li><img id="i49" src="circle.svg"></li>
             </ul>
             <ul>
-                <li><img id="i50" src="neonring.png"></li>
-                <li><img id="i51" src="neonring.png"></li>
-                <li><img id="i52" src="neonring.png"></li>
-                <li><img id="i53" src="neonring.png"></li>
-                <li><img id="i54" src="neonring.png"></li>
-                <li><img id="i55" src="neonring.png"></li>
-                <li><img id="i56" src="neonring.png"></li>
-                <li><img id="i57" src="neonring.png"></li>
-                <li><img id="i58" src="neonring.png"></li>
-                <li><img id="i59" src="neonring.png"></li>
+                <li><img id="i50" src="circle.svg"></li>
+                <li><img id="i51" src="circle.svg"></li>
+                <li><img id="i52" src="circle.svg"></li>
+                <li><img id="i53" src="circle.svg"></li>
+                <li><img id="i54" src="circle.svg"></li>
+                <li><img id="i55" src="circle.svg"></li>
+                <li><img id="i56" src="circle.svg"></li>
+                <li><img id="i57" src="circle.svg"></li>
+                <li><img id="i58" src="circle.svg"></li>
+                <li><img id="i59" src="circle.svg"></li>
             </ul>
             <ul>
-                <li><img id="i60" src="neonring.png"></li>
-                <li><img id="i61" src="neonring.png"></li>
-                <li><img id="i62" src="neonring.png"></li>
-                <li><img id="i63" src="neonring.png"></li>
-                <li><img id="i64" src="neonring.png"></li>
-                <li><img id="i65" src="neonring.png"></li>
-                <li><img id="i66" src="neonring.png"></li>
-                <li><img id="i67" src="neonring.png"></li>
-                <li><img id="i68" src="neonring.png"></li>
-                <li><img id="i69" src="neonring.png"></li>
+                <li><img id="i60" src="circle.svg"></li>
+                <li><img id="i61" src="circle.svg"></li>
+                <li><img id="i62" src="circle.svg"></li>
+                <li><img id="i63" src="circle.svg"></li>
+                <li><img id="i64" src="circle.svg"></li>
+                <li><img id="i65" src="circle.svg"></li>
+                <li></li>
+                <li><img id="i67" src="circle.svg"></li>
+                <li><img id="i68" src="circle.svg"></li>
+                <li><img id="i69" src="circle.svg"></li>
             </ul>
             <ul>
-                <li><img id="i70" src="neonring.png"></li>
-                <li><img id="i71" src="neonring.png"></li>
-                <li><img id="i72" src="neonring.png"></li>
-                <li><img id="i73" src="neonring.png"></li>
-                <li><img id="i74" src="neonring.png"></li>
-                <li><img id="i75" src="neonring.png"></li>
-                <li><img id="i76" src="neonring.png"></li>
-                <li><img id="i77" src="neonring.png"></li>
-                <li><img id="i78" src="neonring.png"></li>
-                <li><img id="i79" src="neonring.png"></li>
+                <li><img id="i70" src="circle.svg"></li>
+                <li><img id="i71" src="circle.svg"></li>
+                <li><img id="i72" src="circle.svg"></li>
+                <li><img id="i73" src="circle.svg"></li>
+                <li><img id="i74" src="circle.svg"></li>
+                <li><img id="i75" src="circle.svg"></li>
+                <li><img id="i76" src="circle.svg"></li>
+                <li><img id="i77" src="circle.svg"></li>
+                <li><img id="i78" src="circle.svg"></li>
+                <li><img id="i79" src="circle.svg"></li>
             </ul>
             <ul>
-                <li><img id="i80" src="neonring.png"></li>
-                <li><img id="i81" src="neonring.png"></li>
-                <li><img id="i82" src="neonring.png"></li>
-                <li><img id="i83" src="neonring.png"></li>
-                <li><img id="i84" src="neonring.png"></li>
-                <li><img id="i85" src="neonring.png"></li>
-                <li><img id="i86" src="neonring.png"></li>
-                <li><img id="i87" src="neonring.png"></li>
-                <li><img id="i88" src="neonring.png"></li>
-                <li><img id="i89" src="neonring.png"></li>
+                <li><img id="i80" src="circle.svg"></li>
+                <li><img id="i81" src="circle.svg"></li>
+                <li><img id="i82" src="circle.svg"></li>
+                <li><img id="i83" src="circle.svg"></li>
+                <li><img id="i84" src="circle.svg"></li>
+                <li><img id="i85" src="circle.svg"></li>
+                <li><img id="i86" src="circle.svg"></li>
+                <li><img id="i87" src="circle.svg"></li>
+                <li><img id="i88" src="circle.svg"></li>
+                <li><img id="i89" src="circle.svg"></li>
             </ul>
             <ul>
-                <li><img id="i90" src="neonring.png"></li>
-                <li><img id="i91" src="neonring.png"></li>
-                <li><img id="i92" src="neonring.png"></li>
-                <li><img id="i93" src="neonring.png"></li>
-                <li><img id="i94" src="neonring.png"></li>
-                <li><img id="i95" src="neonring.png"></li>
-                <li><img id="i96" src="neonring.png"></li>
-                <li><img id="i97" src="neonring.png"></li>
-                <li><img id="i98" src="neonring.png"></li>
-                <li><img id="i99" src="neonring.png"></li>
+                <li><img id="i90" src="circle.svg"></li>
+                <li><img id="i91" src="circle.svg"></li>
+                <li><img id="i92" src="circle.svg"></li>
+                <li><img id="i93" src="circle.svg"></li>
+                <li><img id="i94" src="circle.svg"></li>
+                <li><img id="i95" src="circle.svg"></li>
+                <li><img id="i96" src="circle.svg"></li>
+                <li><img id="i97" src="circle.svg"></li>
+                <li><img id="i98" src="circle.svg"></li>
+                <li><img id="i99" src="circle.svg"></li>
             </ul>
         </div>
 
