Done with the assignment

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
      <div class="grids" id="right"></div>
      <div class="grids" id="right"></div>
      <div class="grids" id="right"></div>
-     <div class="grids" id="sp"></div>
+     <div class="grids" id="sp" data="this is a message box 1" data-2="this is a message box 2"></div>
      <div class="grids" id="left"></div>
      <div class="grids" id="left"></div>
      <div class="grids" id="left"></div>
@@ -93,7 +93,7 @@
      <div class="grids" id="random"></div>
      <div class="grids" id="random"></div>
      <div class="grids" id="random"></div>
-     <div class="grids"id="random"></div>
+     <div class="grids" id="random"></div>
      <div class="grids" id="random"></div>
      <div class="grids" id="random"></div>
      <div class="grids" id="tiltedup"></div>
