--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
 <link rel="stylesheet" href="style.css">
 
 <body>
+    <h1>
+        Excited and Secretive Pebbeles
+    </h1>
     <div class="container">
 
      <div class="grids" id="diagonal"> </div>
@@ -114,6 +117,12 @@
      <div class="grids" id="diagonalup"></div>
 
     </div>
+    <!-- <div class="message1">
+        Hello Guys
+    </div>
+    <div class="message2">
+        I am Bhavya Jain
+    </div> -->
 </body>
 
 </html>
